availability service code refactoring